--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <li class="member">
               <img
                 src="./images/tom.jpg"
-                srcset="./images/tom.jpg 1x, ./images/tom@2x.jpg 2x"
+                srcset="./images/tom.jpg 1x, ./images/tom@2x.png 2x"
                 alt="tom"
               />
               <h3>Tom Ford</h3>
@@ -247,7 +247,7 @@
             <li class="member">
               <img
                 src="./images/camila.jpg"
-                srcset="./images/camila.jpg 1x, ./images/camila@2x.jpg 2x"
+                srcset="./images/camila.jpg 1x, ./images/camila@2x.png 2x"
                 alt="camila"
               />
               <h3>Camila Garcia</h3>
@@ -286,7 +286,7 @@
             <li class="member">
               <img
                 src="./images/daniel.jpg"
-                srcset="./images/daniel.jpg 1x, ./images/daniel@2x.jpg 2x"
+                srcset="./images/daniel.jpg 1x, ./images/daniel@2x.png 2x"
                 alt="daniel"
               />
               <h3>Daniel Wilson</h3>
@@ -337,7 +337,7 @@
                   src="./images/banking-app.jpg"
                   srcset="
                     ./images/banking-app.jpg    1x,
-                    ./images/banking-app@2x.jpg 2x
+                    ./images/banking-app@2x.png 2x
                   "
                   alt="banking-app"
                 />
@@ -359,7 +359,7 @@
                   src="./images/cashless-payment.jpg"
                   srcset="
                     ./images/cashless-payment.jpg    1x,
-                    ./images/cashless-payment@2x.jpg 2x
+                    ./images/cashless-payment@2x.png 2x
                   "
                   alt="cashless-payment"
                 />
@@ -381,7 +381,7 @@
                   src="./images/meditation-app.jpg"
                   srcset="
                     ./images/meditation-app.jpg    1x,
-                    ./images/meditation-app@2x.jpg 2x
+                    ./images/meditation-app@2x.png 2x
                   "
                   alt="meditation-app"
                 />
@@ -403,7 +403,7 @@
                   src="./images/taxi-service.jpg"
                   srcset="
                     ./images/taxi-service.jpg    1x,
-                    ./images/taxi-service@2x.jpg 2x
+                    ./images/taxi-service@2x.png 2x
                   "
                   alt="taxi-service"
                 />
@@ -425,7 +425,7 @@
                   src="./images/screen-illustrations.jpg"
                   srcset="
                     ./images/screen-illustrations.jpg    1x,
-                    ./images/screen-illustrations@2x.jpg 2x
+                    ./images/screen-illustrations@2x.png 2x
                   "
                   alt="screen-illustrations"
                 />
@@ -447,7 +447,7 @@
                   src="./images/online-courses.jpg"
                   srcset="
                     ./images/online-courses.jpg    1x,
-                    ./images/online-courses@2x.jpg 2x
+                    ./images/online-courses@2x.png 2x
                   "
                   alt="online-courses"
                 />
