--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <li class="member">
               <img
                 src="./images/mark.jpg"
-                srcset="./images/mark.jpg 1x, ./images/mark@2x.jpg 2x"
+                srcset="./images/mark.jpg 1x, ./images/mark@2x.png 2x"
                 alt="mark"
               />
               <h3>Mark Guerro</h3>
